// Physical ERD for the report. Only database-local foreign keys are drawn.

Table role {
  id bigint [pk]
  name varchar(255)
}

Table users {
  id bigint [pk]
  role_id bigint
  email varchar(100) [unique]
  first_name varchar(50)
  last_name varchar(50)
  phone varchar(15)
  active boolean
  is_banned boolean
}

Table address {
  id bigint [pk]
  user_id bigint
  full_name varchar(50)
  phone_number varchar(15)
  province varchar(100)
  district varchar(50)
  ward varchar(50)
  street varchar(50)
}

Table category {
  id bigint [pk]
  parent_category_id bigint
  name varchar(50) [unique]
  level int
  is_parent boolean
}

Table product {
  id bigint [pk]
  category_id bigint
  title varchar(100)
  brand varchar(50)
  price int
  discounted_price int
  quantity_sold bigint
  average_rating double
  num_ratings int
  description text
}

Table image {
  id bigint [pk]
  product bigint
  download_url varchar(500)
  file_name varchar(255)
  file_type varchar(50)
}

Table sizes {
  id bigint [pk]
  product_id bigint
  name varchar(255)
  quantity int
}

Table review {
  id bigint [pk]
  product_id bigint
  user_id bigint [note: 'External reference: Auth Service users.id']
  rating int
  review_content varchar(500)
  created_at timestamp
}

Table order_address {
  id bigint [pk]
  full_name varchar(255)
  phone_number varchar(255)
  province varchar(255)
  district varchar(255)
  ward varchar(255)
  street varchar(255)
  note varchar(255)
}

Table orders {
  id bigint [pk]
  order_address bigint
  user_id bigint [note: 'External reference: Auth Service users.id']
  user_email varchar(255)
  order_date timestamp
  delivery_date timestamp
  order_status varchar(255)
  payment_method varchar(255)
  payment_status varchar(255)
  original_price int
  total_discounted_price int
  discount int
  total_items int
}

Table order_item {
  id bigint [pk]
  order_id bigint
  product_id bigint [note: 'External reference: Catalog Service product.id']
  product_name varchar(255)
  product_image_url varchar(255)
  size varchar(255)
  quantity int
  price int
  discounted_price int
}

Table payment_details {
  id bigint [pk]
  order_id bigint [unique, note: 'External reference: Order Service orders.id']
  payment_method varchar(255)
  payment_status varchar(255)
  transaction_id varchar(100)
  total_amount int
  payment_date timestamp
  payment_log text
  vnp_response_code varchar(255)
}

TableGroup "Auth Service · kyro_auth" {
  role
  users
  address
}

TableGroup "Catalog Service · kyro_catalog" {
  category
  product
  image
  sizes
  review
}

TableGroup "Order Service · kyro_order" {
  order_address
  orders
  order_item
}

TableGroup "Payment Service · kyro_payment" {
  payment_details
}

Ref: role.id < users.role_id
Ref: users.id < address.user_id
Ref: category.id < category.parent_category_id
Ref: category.id < product.category_id
Ref: product.id < image.product
Ref: product.id < sizes.product_id
Ref: product.id < review.product_id
Ref: order_address.id < orders.order_address
Ref: orders.id < order_item.order_id
